--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,10 @@
 
 
 .mainBox {
-        width: 300px;
         border: 15px solid rgb(34, 44, 34);
         padding: 50px;
         margin: 20px;
-        height: 500px;
+        height: 600px;
 }
 
 
@@ -34,10 +33,35 @@
 
 
 .img {
-    
+    margin: auto;
     height:450px;
-    width:670px;
-    margin-top: -40px;
-    padding: 20px;
+    width: 100%;
+
+    
 }
 
+figcaption {
+    margin: 20px 10px;
+    text-align: center;
+}
+
+.About > p, h1 {
+   /* border: 1px black solid; */
+    text-align: center;
+    margin: 20px;
+}
+
+.About > h3 {
+    margin-left: 30px;
+}
+
+.About > ul {
+   /* border: solid black 1px;*/
+    margin: 20px;
+    letter-spacing: 0.04em;   
+}
+
+.About > ul > li {
+    font-family: 'Times New Roman';
+    
+}
