--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 
 
-.header {
+#title {
     padding: 60px;
     text-align: center;
     background: #9dc7bf;
@@ -11,12 +11,12 @@
     font-size: 30px;
   }
 
-.body {
+#main {
     background-color: rgba(195, 175, 149,0.2);
 }
 
 
-.mainBox {
+#img-div {
         border: 15px solid rgb(34, 44, 34);
         padding: 50px;
         margin: 20px;
@@ -35,8 +35,7 @@
 .img {
     margin: auto;
     height:450px;
-    width: 100%;
-
+    max-width: 100%;
     
 }
 
@@ -45,23 +44,27 @@ figcaption {
     text-align: center;
 }
 
-.About > p, h1 {
+#tribute-info > p, h1 {
    /* border: 1px black solid; */
     text-align: center;
     margin: 20px;
 }
 
-.About > h3 {
+#tribute-info > h3 {
     margin-left: 30px;
 }
 
-.About > ul {
+#tribute-info > ul {
    /* border: solid black 1px;*/
     margin: 20px;
     letter-spacing: 0.04em;   
 }
 
-.About > ul > li {
+#tribute-info > ul > li {
     font-family: 'Times New Roman';
     
+}
+
+#tribute-link{
+    color: white;
 }
